Fixat ljud så det fungerar